# rusty-vm

./: Cargo.toml  README.md
src/: main.rs
src/tinyvm/: bytecode.rs  mod.rs  vm.rs
